--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "A new TTS mod.",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json}\""
+    "lint": "npm run lint-es && npm run lint-schema",
+    "lint-es": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\"",
+    "lint-schema": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -d \"./data/unit/**.json\"",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,10 +19,19 @@
   },
   "homepage": "https://github.com/swlegion/stardust#readme",
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "ajv-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.2"
+    "jest": "^25.2.4",
+    "prettier": "^2.0.2",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
   }
 }
