WIP: Add model data.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npm run lint-es && npm run lint-schema",
     "lint-es": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\"",
-    "lint-schema": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -d \"./data/unit/**.json\"",
+    "lint-schema": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -r \"./data/schema/model.json\" -d \"./data/unit/**.json\"",
     "test": "jest"
   },
   "repository": {
