--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "fix": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\" --fix",
     "lint": "npm run lint-es && npm run lint-schema",
     "lint-es": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\"",
-    "lint-schema": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -r \"./data/schema/model.json\" -d \"./data/unit/**.json\"",
+    "lint-schema": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -r \"./data/schema/model.json\" -d \"./data/unit/**/*.json\"",
     "presubmit": "npm install && npm run lint && npm test",
     "test": "jest"
   },
