--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/swlegion/stardust#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
@@ -30,7 +31,10 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "glob": "^7.1.6",
     "jest": "^25.2.4",
+    "json-schema-to-typescript": "^8.2.0",
+    "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.8.1",
