Refactor 'scripts' into standalone files.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "description": "A new TTS mod.",
   "scripts": {
-    "fix": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\" --fix",
-    "lint": "npm run lint-es && npm run lint-schema-unit && npm run lint-schema-upgrade",
-    "lint-es": "./node_modules/.bin/eslint --ignore-path .gitignore \"**.{js,ts,json,jsonc}\"",
-    "lint-schema-unit": "./node_modules/.bin/ajv -s \"./data/schema/unit.json\" -r \"./data/schema/model.json\" -d \"./data/unit/**/*.json\"",
-    "lint-schema-upgrade": "./node_modules/.bin/ajv -s \"./data/schema/upgrade.json\" -r \"./data/schema/model.json\" -d \"./data/upgrade/**/*.json\"",
+    "fix": "npx ts-node ./scripts/fix.ts",
+    "lint": "npx ts-node ./scripts/lint.ts",
     "presubmit": "npm install && npm run lint && npm test",
     "test": "jest"
   },
@@ -22,13 +19,16 @@
   },
   "homepage": "https://github.com/swlegion/stardust",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/fs-extra": "^8.1.0",
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.5",
+    "@types/shelljs": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "ajv-cli": "^3.1.0",
+    "chalk": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-json": "^2.1.1",
@@ -38,6 +38,7 @@
     "jest": "^25.2.4",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "shelljs": "^0.8.3",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
