--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ coverage
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Build/output folders
+.build/
+
 # Dependency directories
 node_modules/
 
