--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "npx ts-node ./scripts/lint.ts",
     "presubmit": "npm install && npm run lint && npm test",
     "test": "jest",
-    "watch": "nodemon ./scripts/build.ts --watch src --watch lib --ext js,ts,xml,json,lua"
+    "watch": "nodemon ./scripts/build.ts --watch src --watch lib --ext js,ts,xml,json,ttslua"
   },
   "repository": {
     "type": "git",
