--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,2 @@
-# We do not author this file, so we can't guarantee correctness.
-src/mod/Stardust.json
+# We do not author these files directly, so we can't guarantee correctness.
+src/
