--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npx ts-node ./scripts/build.ts",
     "doctor": "npx ts-node ./scripts/doctor.ts",
+    "extract": "npx ts-node ./scripts/extract.ts",
     "fix": "npx ts-node ./scripts/fix.ts",
     "lint": "npx ts-node ./scripts/lint.ts",
     "presubmit": "npm install && npm run lint && npm test",
@@ -41,6 +42,7 @@
     "jest": "^25.2.4",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "sanitize-filename": "^1.6.3",
     "shelljs": "^0.8.3",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.8.1",
