--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/fs-extra": "^8.1.0",
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
+    "@types/mock-fs": "^4.10.0",
     "@types/node": "^13.9.5",
     "@types/shelljs": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
@@ -40,6 +41,7 @@
     "fs-extra": "^9.0.0",
     "glob": "^7.1.6",
     "jest": "^25.2.4",
+    "mock-fs": "^4.11.0",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "sanitize-filename": "^1.6.3",
