--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A new TTS mod.",
   "scripts": {
     "build": "npx ts-node ./scripts/build.ts",
+    "deploy": "gh-pages -d .build",
     "doctor": "npx ts-node ./scripts/doctor.ts",
     "extract": "npx ts-node ./scripts/extract.ts",
     "fix": "npx ts-node ./scripts/fix.ts",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/fs-extra": "^8.1.0",
+    "@types/gh-pages": "^2.2.0",
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/mock-fs": "^4.10.0",
@@ -39,6 +41,7 @@
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.2",
     "fs-extra": "^9.0.0",
+    "gh-pages": "^2.2.0",
     "glob": "^7.1.6",
     "jest": "^25.2.4",
     "mock-fs": "^4.11.0",
