--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run test
 
       - name: Build
-        run: npm run build
+        run: npm run build --skip-linking
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
