--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Build
         run: npm run build --skip-linking
+
+      - name: Save
         uses: actions/upload-artifact@v1
 
   deploy:
