--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,12 +41,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    needs: build
+
     steps:
       - name: Download
         uses: actions/download-artifact@v1
         with:
           name: build-files
-          path: .build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.4.6
