--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -59,6 +59,6 @@ jobs:
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
-          DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG }}
+          DEBUG: true
           FOLDER: .build
           SINGLE_COMMIT: true
