--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -56,9 +56,7 @@ jobs:
           path: publish
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.4.6
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: publish
-          SINGLE_COMMIT: true
+          personal_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./publish
