--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.5.6
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./publish
           publish_branch: gh-pages
