--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -58,9 +58,9 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.5.6
         with:
-          deploy_key: '${{ secrets.ACTIONS_DEPLOY_KEY }}'
-          publish_dir: './publish'
-          publish_branch: 'gh-pages'
+          publish_dir: ./publish
+          publish_branch: gh-pages
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           commit_message: 'Deploy commit: ${{ github.event.head_commit.message }}'
+          deploy_key: abcd
