--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "A new TTS mod.",
   "scripts": {
-    "build": "npx ts-node ./scripts/build.ts",
+    "build": "npx ts-node ./scripts/build.ts --skip-linking",
+    "deploy": "gh-pages -d .build",
     "doctor": "npx ts-node ./scripts/doctor.ts",
     "extract": "npx ts-node ./scripts/extract.ts",
     "fix": "npx ts-node ./scripts/fix.ts",
