--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
           path: .build
 
   deploy:
-    if: github.event == "push"
+    if: ${{ github.event_name == "push" }}
 
     runs-on: ubuntu-latest
 
