--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "link": "ts-node ./tool/link.ts",
     "lint": "prettier --ignore-path .prettierignore --list-different src && eslint src tool --ext .ts",
     "start": "ts-node ./tool/start.ts",
-    "test": "jest"
+    "test": "jest",
+    "validate": "ts-node ./tool/validate.ts"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,11 @@
     "@matanlurey/tts-runner": "github:matanlurey/tts-runner#dist",
     "@matanlurey/tts-save-files": "github:matanlurey/tts-save-format",
     "@types/fs-extra": "^8.1.0",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^25.2.2",
+    "@types/shelljs": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "ajv-cli": "^3.1.0",
     "chokidar": "^3.4.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -34,6 +37,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.5.4",
     "prettier": "^2.0.5",
+    "shelljs": "^0.8.4",
     "ts-jest": "^25.5.1",
     "ts-node": "^8.9.1",
     "typescript": "^3.9.2"
