--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fix": "prettier --write . --ignore-path .prettierignore && eslint --fix src tool --ext .ts",
     "link": "ts-node ./tool/link.ts",
     "lint": "prettier --ignore-path .prettierignore --list-different src && eslint src tool --ext .ts",
+    "serve": "http-server ./assets",
     "start": "ts-node ./tool/start.ts",
     "test": "jest",
     "validate": "ts-node ./tool/validate.ts"
@@ -24,6 +25,7 @@
     "@matanlurey/tts-runner": "github:matanlurey/tts-runner#dist",
     "@matanlurey/tts-save-files": "github:matanlurey/tts-save-format",
     "@types/fs-extra": "^8.1.0",
+    "@types/http-server": "^0.10.0",
     "@types/jest": "^25.2.2",
     "@types/shelljs": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -35,11 +37,15 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "http-server": "^0.12.3",
     "jest": "^25.5.4",
     "prettier": "^2.0.5",
     "shelljs": "^0.8.4",
     "ts-jest": "^25.5.1",
     "ts-node": "^8.9.1",
     "typescript": "^3.9.2"
+  },
+  "dependencies": {
+    "make-promises-safe": "^5.1.0"
   }
 }
