--- a/.github/workflows/lua.yml
+++ b/.github/workflows/lua.yml
@@ -23,6 +23,12 @@ jobs:
         run: |
           ldoc -d ldoc mod
 
+      - name: Upload LDoc
+        uses: actions/upload-artifact@v1
+        with:
+          name: ldoc
+          path: ldoc
+
   deploy:
     if: github.event_name == 'push'
 
@@ -32,3 +38,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Download LDoc
+        uses: actions/download-artifact@v1
+        with:
+          name: ldoc
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./ldoc
