Tweak and try ldoc output again. (#44)
* Tweak and try ldoc output again.

* Rename actions.

* Tweak command.

* More tweaks.

* Try another tweak.

* Cleanup LDoc.

* Upgrade deps.

* Tweak docs.

* Augment LDoc further.

* More LDoc tweaks.

* Fix fields.

* Tweak again.

--- a/.github/workflows/lua.yml
+++ b/.github/workflows/lua.yml
@@ -1,4 +1,4 @@
-name: Lua CI
+name: Site Generator
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
 
       - name: ldoc
         run: |
-          ldoc -d ldoc mod
+          ldoc --all --dir ldoc mod
 
       - name: Upload LDoc
         uses: actions/upload-artifact@v1
