--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@matanlurey/tts-expander": "github:matanlurey/tts-expander#dist",
     "@matanlurey/tts-runner": "github:matanlurey/tts-runner#dist",
     "@matanlurey/tts-save-files": "github:matanlurey/tts-save-format",
-    "@types/fs-extra": "^8.1.0",
+    "@types/fs-extra": "^8.1.1",
     "@types/http-server": "^0.10.0",
     "@types/jest": "^25.2.2",
-    "@types/shelljs": "^0.8.7",
+    "@types/minimist": "^1.2.0",
+    "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "ajv-cli": "^3.1.0",
@@ -46,6 +47,7 @@
     "typescript": "^3.9.2"
   },
   "dependencies": {
-    "make-promises-safe": "^5.1.0"
+    "make-promises-safe": "^5.1.0",
+    "minimist": "^1.2.5"
   }
 }
